# enki

./: .readme.markdown.swp  LICENSE  Setup.hs  TestSuit.hs  enki.cabal  enki.hs  enki_test.hs  readme.markdown  runTests.sh
src/: Enki.hs  Main.hs
src/Enki/: Parser.hs
test/: TestSuit.hs
test/Enki/: Tests.hs
test/Enki/Parser/: Tests.hs
