Name:                enki
Version:             0.0
Description:         A Haskell Inference Engine
License:             GPL
License-file:        LICENSE
Author:              Marcos Matos
Maintainer:          marcosccm@gmail.com
Build-Type:          Simple
Cabal-Version:       >=1.8

Library
  hs-source-dirs: src
  build-depends: HUnit
  exposed-modules: 
    Enki,
    Enki.Parser
  build-depends:     
    base                    > 3 && < 5

Executable enki
  hs-source-dirs:    src
  Main-is:           Main.hs
  Build-Depends:     
    base                    > 3 && < 5

Test-Suite tests
  type: exitcode-stdio-1.0
  main-is: TestSuit.hs
  hs-source-dirs: test
  build-depends:     
    base                    > 3 && < 5,
    HUnit                   >= 1.2 && < 2,
    test-framework          >= 0.6      && <0.7,
    test-framework-hunit    >= 0.2.7    && <0.3,
    enki
